@@ -8,4 +8,7 @@ applet_LTLIBRARIES = libshowdesktop.la
 libshowdesktop_la_SOURCES = showdesktop.c
 libshowdesktop_la_LDFLAGS = -avoid-version
 
+icondir = $(datadir)/pixmaps
+icon_DATA = mb-applet-showdesktop.png
+
 MAINTAINERCLEANFILES = Makefile.in
